# ashkal

./: CMakeLists.txt  build.bat  build.sh  configure.bat  setup.bat  setup.sh
Applications/Scratch/: CMakeLists.txt  configure.bat  configure.sh
Applications/Scratch/Source/: main.cpp
Config/: dependencies.cmake  dependencies.windows.cmake
Config/Tests/: CMakeLists.txt
Include/Ashkal/: AmbientLight.hpp  Ashkal.hpp  BoundingBox.hpp  Camera.hpp  Color.hpp  ColorSampler.hpp  Cube.hpp  DirectionalLight.hpp  Fragment.hpp  Frustum.hpp  Material.hpp  Matrix.hpp  Mesh.hpp  MeshLoader.hpp  MeshNode.hpp  MeshTriangle.hpp  Model.hpp  Octree.hpp  Plane.hpp  Point.hpp  Raster.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  SceneElement.hpp  SdlSurfaceColorSampler.hpp  ShadedVertex.hpp  ShadingSample.hpp  ShadingTerm.hpp  SolidColorSampler.hpp  Sphere.hpp  TextRenderer.hpp  TextureCoordinate.hpp  Transformation.hpp  Vector.hpp  Vertex.hpp  VertexTriangle.hpp  Voxel.hpp
Source/Tests/: AmbientLightTester.cpp  BoundingBoxTester.cpp  CameraTester.cpp  ColorTester.cpp  CubeTester.cpp  DirectionalLightTester.cpp  FrustumTester.cpp  MatrixTester.cpp  PlaneTester.cpp  PointTester.cpp  RayTester.cpp  SceneTester.cpp  VectorTester.cpp  VoxelTester.cpp
